fix wrapping

--- a/master.css
+++ b/master.css
@@ -18,13 +18,15 @@ h3 {
 }
 
 p {
-  white-space: pre-line;
+  white-space: normal;
+  word-wrap: break-word;
+  line-height: 1.2;
   margin: 0.5rem 0 1rem;
 }
 
 br {
   display: block;
-  margin: -.4rem 0;
+  margin: 0;
   content: "";
 }
 
